# Recordairy

./: .gitignore  README.md
Recordiary/Recordiary/: Color+Hex.swift  ContentView.swift  InteriorRoom.usdz  RecordiaryApp.swift
Recordiary/Recordiary.xcodeproj/: project.pbxproj
Recordiary/Recordiary/Client/: Client.swift
Recordiary/Recordiary/Component/: CustomModal.swift  FurnitureDetail.swift
Recordiary/Recordiary/Data/: FurnitureDummyData.swift  StructFile.swift
Recordiary/Recordiary/Managers/: RecordingManager.swift
Recordiary/Recordiary/Models/: Diary.swift  Furniture.swift
Recordiary/Recordiary/ViewModels/: AudioPlaybackViewModel.swift  CalendarViewModel.swift  LibraryViewModel.swift  MyHomeViewModel.swift  (+3 more)
Recordiary/RecordiaryTests/: ClientTests.swift  RecordiaryTests.swift
Recordiary/RecordiaryUITests/: RecordiaryUITests.swift  RecordiaryUITestsLaunchTests.swift
Recordiary/Views/: CalendarView.swift
backend/: .env.sample  Cargo.toml
backend/src/: db.rs  handlers.rs  lib.rs  main.rs  openai.rs  utils.rs
backend/src/db/: conn.rs  deco.rs  diary.rs  user_deco.rs
backend/src/handlers/: calendar.rs  deco.rs  diary.rs  room.rs
backend/src/openai/: client.rs  diary.rs
backend/src/storage/: client.rs  diary.rs
backend/src/utils/: coordinates.rs  parse_multipart.rs  sqlx.rs
docs/: index.html
recc/recc/: CalendarView.swift  ContentView.swift  FriendsView.swift  HomeView.swift  reccApp.swift
recc/recc.xcodeproj/: project.pbxproj
recc/reccTests/: reccTests.swift
recc/reccUITests/: reccUITests.swift  reccUITestsLaunchTests.swift
(+10 files in other folders)
